// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiCard matches the snapshot 1`] = `
<div
  className="defaultStyle-g21vfe-0 defaultStyle__Card-g21vfe-1 defaultStyle__ApiCard-g21vfe-4 izQYFc"
/>
`;

exports[`Policy matches the snapshot 1`] = `
<section
  className="defaultStyle__Policy-g21vfe-8 dptqDY"
/>
`;

exports[`defaultStyle matches the snapshot 1`] = `
<div
  className="defaultStyle-g21vfe-0 dMrRuR"
/>
`;
